// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty tab view 1`] = `
<div
  className="scene tabsScene"
>
  <div
    className="header"
  >
    <img
      alt=""
      id="logo"
      src="grouptabs-logo.svg"
    />
    <h2>
      Grouptabs
    </h2>
  </div>
  <div
    className="content content-with-footer"
  >
    <main>
      <div
        className="empty-info"
      >
        <p>
          <strong>
            Track expenses in a group of people!
          </strong>
        </p>
        <p>
          Every group has a tab like "Summer roadtrip" or "Badminton team" – start by creating one!
        </p>
      </div>
      <div
        className="row emptycontent"
      >
        <form
          className="create-form"
          onSubmit={[Function]}
        >
          <input
            className="full-width"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Create new tab"
            type="text"
            value=""
          />
          <button
            className="create-tab"
          >
            Create
          </button>
        </form>
      </div>
      <div
        className="row"
      >
        <form
          className="import-form"
          onSubmit={[Function]}
        >
          <input
            className="full-width"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Open shared tab"
            type="text"
            value=""
          />
          <button>
            Open shared tab
          </button>
          <div
            className="error-message"
          />
        </form>
      </div>
    </main>
    <footer>
      Version: 
      VERSION
       ·
       
      <a
        href="https://grouptabs.net"
        rel="noopener"
        target="_blank"
      >
        grouptabs.net
      </a>
    </footer>
  </div>
</div>
`;

exports[`renders tab view 1`] = `
<div
  className="scene tabsScene"
>
  <div
    className="header"
  >
    <img
      alt=""
      id="logo"
      src="grouptabs-logo.svg"
    />
    <h2>
      Grouptabs
    </h2>
  </div>
  <div
    className="content content-with-footer"
  >
    <main>
      <div
        className="row tabs"
      >
        <button
          className="full-width"
          onClick={[Function]}
        >
          <strong>
            TAB NAME
          </strong>
          <span>
            No transactions yet
          </span>
        </button>
      </div>
      <div
        className="row"
      >
        <form
          className="create-form"
          onSubmit={[Function]}
        >
          <input
            className="full-width"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Create new tab"
            type="text"
            value=""
          />
          <button
            className="create-tab"
          >
            Create
          </button>
        </form>
      </div>
      <div
        className="row"
      >
        <form
          className="import-form"
          onSubmit={[Function]}
        >
          <input
            className="full-width"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Open shared tab"
            type="text"
            value=""
          />
          <button>
            Open shared tab
          </button>
          <div
            className="error-message"
          />
        </form>
      </div>
    </main>
    <footer>
      Version: 
      VERSION
       ·
       
      <a
        href="https://grouptabs.net"
        rel="noopener"
        target="_blank"
      >
        grouptabs.net
      </a>
    </footer>
  </div>
</div>
`;
